syntax = "proto3";

option go_package = ".";

import "google/protobuf/wrappers.proto";

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order orderList = 3;
}

service OrderManagement {
  rpc processOrders(stream google.protobuf.StringValue)
      returns (stream CombinedShipment);
}

message HttpErrorCode {
  enum ErrorCode {
    ParamErrorCode = 0;
    SysErrorCode = 1;
  }
  ErrorCode code = 1;
  string message = 2;
}